# test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/test_task/: main.py
src/test_task/application/: converters.py
src/test_task/application/database_models/: __init__.py  base.py  building.py  domain.py  organization.py  organization_phone.py
src/test_task/application/services/: __init__.py  create_building.py  create_domain.py  create_organization.py  get_organization_by_id.py  get_organization_by_name.py  get_organizations_by_area.py  get_organizations_by_building_id.py  get_organizations_by_domain.py  get_organizations_by_domain_id.py
src/test_task/application/view_models/: __init__.py  building.py  domain.py  organization.py
src/test_task/configs/: __init__.py  client_access.py  database.py  env_var_getter.py
src/test_task/migrations/: alembic.ini  env.py  script.py.mako
src/test_task/migrations/versions/: 4211c88a6f37_.py
src/test_task/web_api/: api_key_verifier.py  app.py  routes.py  stub.py
