[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_task"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "sqlalchemy==2.0.*",
    "geoalchemy2[shapely]==0.18.*",
    "alembic==1.16.*",
    "psycopg[binary]==3.2.*",
    "fastapi==0.117.*",
    "uvicorn[standard]==0.34.*",
    "gunicorn==23.0.*",
    "cyclopts==3.24.*",
]

[project.scripts]
test-task = "test_task.main:main"
